--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -4,6 +4,7 @@
   align-items: center;
   padding: 0rem 5rem;
   background-color: white;
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
 }
 
 .cactus__navbar-links_logo img {
