--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -3,8 +3,8 @@
   justify-content: space-between;
   align-items: center;
   padding: 0rem 5rem;
-  background-color: white;
-  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
+  background: #FFFFFF;
+  box-shadow: inset -1px 1px 14px 1px rgb(0 0 0 / 10%)
 }
 
 .cactus__navbar-links_logo img {
