--- a/src/components/templeteSliderView/templeteSliderView.css
+++ b/src/components/templeteSliderView/templeteSliderView.css
@@ -1,85 +1,102 @@
 .cactus-dashboard-slider_top_view {
-    display: flex;
-    flex-direction: column;
-    padding: 13rem 5rem 5rem 5rem;
-    background-color: white;
+  display: flex;
+  flex-direction: column;
+  padding: 13rem 5rem 5rem 5rem;
+  background-color: white;
 }
 
 .cactus-dashboard-slider_title_view {
-    display: flex;
-    width: 100%;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 5rem;
+  display: flex;
+  width: 100%;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 5rem;
 }
 
 .cactus-dashboard-slider_title_view h1 {
-    font-family: 'K2D';
-    font-weight: 500;
-    font-size: 4rem;
-    line-height: 5.2rem;
-    text-align: center;
-    color: #333333;
+  font-family: "K2D";
+  font-weight: 500;
+  font-size: 4rem;
+  line-height: 5.2rem;
+  text-align: center;
+  color: #333333;
 }
 
 .cactus-dashboard-slider_title_view h2 {
-    font-family: 'K2D';
-    font-weight: 400;
-    font-size: 2rem;
-    line-height: 2.6rem;
-    text-align: center;
-    text-decoration-line: underline;
-    color: #2B453E;
-    cursor: pointer;
+  font-family: "K2D";
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 2.6rem;
+  text-align: center;
+  text-decoration-line: underline;
+  color: #2b453e;
+  cursor: pointer;
 }
 
 .cactus-dashboard-slider_view {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
 
 .cactus-dashboard-slider_arrow_image img {
-    width: 6.4rem;
-    height: 6.4rem;
-    object-fit: cover;
-    margin-left: 6.4rem;
-    margin-bottom: 1rem;
-    cursor: pointer;
+  width: 6.4rem;
+  height: 6.4rem;
+  object-fit: cover;
+  margin-left: 6.4rem;
+  margin-bottom: 1rem;
+  cursor: pointer;
 }
 
 .cactus-dashboard-slider_templete_top_view {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 .cactus-dashboard-slider_templete_view {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-left: 6.4rem;
-    cursor: pointer;
-
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-left: 6.4rem;
+  cursor: pointer;
 }
 
 .cactus-dashboard-slider_templete_view img {
-    width: 15rem;
-    height: 15rem;
-    object-fit: cover;
-    border-radius: 10rem;
-    margin-bottom: 1rem;
+  width: 15rem;
+  height: 15rem;
+  object-fit: cover;
+  border-radius: 10rem;
+  margin-bottom: 1rem;
 
-    border: 4px solid #DAE1ED;
+  border: 4px solid #dae1ed;
 }
 
 .cactus-dashboard-slider_templete_view h2 {
-    font-family: 'K2D';
-    font-weight: 400;
-    font-size: 2.4rem;
-    line-height: 3.1rem;
-    text-align: center;
-    color: #333333;
+  font-family: "K2D";
+  font-weight: 400;
+  font-size: 2.4rem;
+  line-height: 3.1rem;
+  text-align: center;
+  color: #333333;
+}
+
+@media screen and (max-width: 950px) {
+  .cactus-dashboard-slider_templete_view img {
+    width: 10rem;
+    height: 10rem;
+  }
+  .cactus-dashboard-slider_templete_view {
+    margin-left: 3.4rem;
+  }
+  .cactus-dashboard-slider_templete_view h2 {
+    font-size: 1.4rem;
+    line-height: 1.8rem;
+  }
+  .cactus-dashboard-slider_arrow_image img {
+    width: 4.4rem;
+    height: 4.4rem;
+  }
 }
