--- a/src/components/textInputBilling/textInputBilling.css
+++ b/src/components/textInputBilling/textInputBilling.css
@@ -18,7 +18,7 @@
   margin-left: 2.8rem;
 }
 .text-input-billing-main-container input {
-  min-width: 60% !important;
+  min-width: 60%;
   display: flex;
   background-color: transparent;
   outline: none;
