--- a/src/pages/billingAddress/billingAdress.css
+++ b/src/pages/billingAddress/billingAdress.css
@@ -82,12 +82,26 @@
   align-items: center;
 }
 
+.billing-address-checkBox-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+.billing-address-checkBox-container input {
+  cursor: pointer;
+  width: 1.6rem;
+  height: 1.6rem;
+  border-radius: none;
+}
+
 .billing-address-checkBox-container p {
   font-weight: 400;
   font-size: 1.6rem;
-
-  color: #333333;
+  margin-left: 2rem;
+  color: #2b2826;
   font-family: "K2D";
+  cursor: pointer;
+  width: 34.8rem;
 }
 
 .billing-address-move-next-btn-container {
@@ -103,6 +117,7 @@
 .billing-address-move-next-btn-container p {
   color: #fff;
   font-size: 2.4rem;
+  font-family: "K2D";
 }
 
 /* ------Media query */
