--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -258,6 +258,9 @@
     justify-content: center;
     margin-top: 3rem;
   }
+  .cactus-dashboard-templete_top_view {
+    padding-left: 0;
+  }
 }
 
 @media screen and (max-width: 690px) {
@@ -337,6 +340,17 @@
   .cactus-dashboard-contact_us_form_button_view h6 {
     font-size: 1.4rem;
   }
+  .cactus-dashboard-templete_view {
+    width: unset;
+  }
+  .cactus-dashboard-templete_image_view img {
+    width: 20.3rem;
+    height: 26rem;
+  }
+  .cactus-dashboard-templete_view {
+    margin-left: 1rem;
+    margin-right: 1rem;
+  }
 }
 
 @media screen and (max-width: 520px) {
@@ -348,5 +362,18 @@
   }
   .cactus-dashboard-slider_templete_view {
     margin-left: 1.6rem;
+  }
+}
+
+@media screen and (max-width: 520px) {
+  .cactus-dashboard-templete_title_view h2 {
+    font-size: 1.6rem;
+  }
+  .cactus-dashboard-templete_view h3 {
+    font-size: 1.2rem;
+  }
+  .cactus-dashboard-templete_image_view img {
+    width: 17.3rem;
+    height: 21rem;
   }
 }
