--- a/src/components/customInputWithDropdown/customInputWithDropdown.css
+++ b/src/components/customInputWithDropdown/customInputWithDropdown.css
@@ -1,106 +1,106 @@
 .cactus-templete_detail-form_dropdown_top_view {
-    display: flex;
-    flex-direction: column;
-    box-sizing: border-box;
-    padding: 1.2rem 2rem;
-    width: 47.8rem;
-    border: 1.5px solid #C7C7C7;
-    border-radius: 5px;
-    margin-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
+  padding: 1.2rem 2rem;
+  width: 47.8rem;
+  border: 1.5px solid #c7c7c7;
+  border-radius: 5px;
+  margin-bottom: 1rem;
 }
 
 .cactus-templete_detail-form_dropdown_title_view {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .cactus-templete_detail-form_dropdown_title_view h4 {
-    font-family: 'K2D';
-    font-weight: 400;
-    font-size: 2rem;
-    line-height: 2.6rem;
-    color: #121212;
+  font-family: "K2D";
+  font-weight: 400;
+  font-size: 2rem;
+  line-height: 2.6rem;
+  color: #121212;
 }
 
 .cactus-templete_detail-form_dropdown_title_view img {
-    width: 2.4rem;
-    height: 2.4rem;
-    object-fit: cover;
-    cursor: pointer;
+  width: 2.4rem;
+  height: 2.4rem;
+  object-fit: cover;
+  cursor: pointer;
 }
 
 .cactus-templete_detail-form_dropdown_top_view h5 {
-    font-family: 'K2D';
-    font-weight: 400;
-    font-size: 1.2rem;
-    line-height: 1.6rem;
-    color: #3E3E3C;
-    padding-top: 2rem;
-    padding-bottom: 0.2rem;
+  font-family: "K2D";
+  font-weight: 400;
+  font-size: 1.2rem;
+  line-height: 1.6rem;
+  color: #3e3e3c;
+  padding-top: 2rem;
+  padding-bottom: 0.2rem;
 }
 
 .cactus-templete_detail-form_dropdown_title_icon_view {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    margin-bottom: 0.2rem;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 0.2rem;
 }
 
 .cactus-templete_detail-form_dropdown_title_icon_view input {
-    outline: none;
-    border: none;
-    flex: 1;
-    margin-right: 1rem;
-    background-color: transparent;
-    font-family: 'K2D';
-    font-weight: 400;
-    font-size: 1.4rem;
-    line-height: 2rem;
-    color: #2B2826;
+  outline: none;
+  border: none;
+  flex: 1;
+  margin-right: 1rem;
+  background-color: transparent;
+  font-family: "K2D";
+  font-weight: 400;
+  font-size: 1.4rem;
+  line-height: 2rem;
+  color: #2b2826;
 }
 
 .cactus-templete_detail-form_dropdown_title_icon_view img {
-    width: 1.3rem;
-    height: 1.3rem;
+  width: 1.3rem;
+  height: 1.3rem;
 }
 
 .cactus-templete_detail-form_dropdown_title_divider {
-    display: flex;
-    border-bottom: 1px solid #DDDBDA;
+  display: flex;
+  border-bottom: 1px solid #dddbda;
 }
 
 .cactus-templete_detail-form_dropdown_background_data_view {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: flex-end;
-    margin-top: 1rem;
-    margin-bottom: 0.5rem;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: flex-end;
+  margin-top: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .cactus-templete_detail-form_dropdown_background_data_view img {
-    width: 8rem;
-    height: 11rem;
-    object-fit: contain;
+  width: 6rem;
+  height: 11rem;
+  object-fit: contain;
 }
 
 .cactus-templete_detail-form_dropdown_background_data_view div {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 0.8rem 2.3rem;
-    cursor: pointer;
-    background: #2B453E;
-    border-radius: 5.6475px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0.8rem 2.3rem;
+  cursor: pointer;
+  background: #2b453e;
+  border-radius: 5.6475px;
 }
 
 .cactus-templete_detail-form_dropdown_background_data_view h6 {
-    font-family: 'K2D';
-    font-weight: 500;
-    font-size: 1rem;
-    line-height: 1.2rem;
-    color: #FFFFFF;
+  font-family: "K2D";
+  font-weight: 500;
+  font-size: 1rem;
+  line-height: 1.2rem;
+  color: #ffffff;
 }
