--- a/src/components/genderModel/genderModel.css
+++ b/src/components/genderModel/genderModel.css
@@ -8,6 +8,7 @@
   align-items: center;
   justify-content: center;
   background-color: rgba(0, 0, 0, 0.6);
+  margin-top: 8rem;
 }
 
 .cactus-gender_model_view {
