--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -4,7 +4,7 @@
   align-items: center;
   padding: 0rem 5rem;
   background: #ffffff;
-  box-shadow: inset -1px 1px 14px 1px rgb(0 0 0 / 10%);
+  box-shadow: 0px 4px 10px 1px rgba(0, 0, 0, 0.1);
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -79,6 +79,7 @@
   font-size: 1.4rem;
   line-height: 2rem;
   color: #706e6b;
+  background-color: #fff;
 }
 
 ::-webkit-input-placeholder {
