--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -29,7 +29,7 @@
 
 .cactus-dashboard-banner_text_view h5 {
   font-family: "K2D";
-  font-weight: 400;
+  font-weight: 500;
   font-size: 1.8rem;
   line-height: 2.3rem;
   color: #333333;
@@ -213,6 +213,21 @@
 
 .alignSelf {
   align-self: flex-start;
+}
+
+.cactus-dashboard-contact_us_form_button_view-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.cactus-dashboard-contact_us_form_button_view-shape img {
+  width: 3.5rem;
+  height: 3.5rem;
+  object-fit: contain;
+  margin-right: 10rem;
 }
 
 @media screen and (max-width: 950px) {
