--- a/src/pages/payment/payment.css
+++ b/src/pages/payment/payment.css
@@ -1,6 +1,6 @@
 .payment-method-price-main-container {
   height: 13.8rem;
-  width: 50%;
+  width: 54%;
   background: #eaf6ff;
   display: flex;
   align-items: center;
@@ -19,7 +19,7 @@
 
 .payment-method-credit-card-main-container {
   margin-bottom: 13rem;
-  width: 50%;
+  width: 54%;
   background: #fff;
   display: flex;
   box-shadow: 0px 0px 20px 1px rgba(0, 0, 0, 0.1);
@@ -44,8 +44,8 @@
   align-items: center;
 }
 .paymwnt-methood-credit-card-img-container img {
-  width: 1.8rem;
-  height: 1.8rem;
+  width: 2.4rem;
+  height: 2.4rem;
 }
 
 .payment-method-credit-card-img img {
@@ -65,7 +65,7 @@
 }
 
 .payment-text-input-main-container {
-  padding: 0 5rem;
+  padding: 0 3rem;
   display: flex;
   width: 100%;
   flex-direction: column;
@@ -132,6 +132,12 @@
   color: #666666;
   width: 54rem;
   margin-bottom: 13rem;
+}
+
+.after-payment-text-main-container {
+  /* width: 100%; */
+  display: flex;
+  flex-direction: column;
 }
 
 /* -----------Media Query------------ */
