--- a/src/pages/aboutUs/aboutUs.css
+++ b/src/pages/aboutUs/aboutUs.css
@@ -4,7 +4,7 @@
   justify-content: space-between;
   align-items: center;
   background-color: #faf6ee;
-  padding: 2.3rem 13rem 2.3rem 15rem;
+  padding: 2.3rem 13rem 2.3rem 27rem;
 }
 
 .cactus-about_us-banner_title_view {
@@ -37,12 +37,12 @@
 .cactus-about_us-banner_image_view {
   display: flex;
   width: 50%;
-  height: 45rem;
+  /* height: 45rem; */
 }
 
 .cactus-about_us-banner_image_view img {
-  width: 100%;
-  height: 100%;
+  width: 60%;
+  height: 60%;
   object-fit: contain;
 }
 
