--- a/src/pages/dashboard/dashboard.css
+++ b/src/pages/dashboard/dashboard.css
@@ -13,7 +13,7 @@
 }
 
 .cactus-dashboard-banner_top_view {
-  padding: 7.6rem 15rem 13rem 5rem;
+  padding: 2rem 8rem 5rem 5rem;
   background: #faf6ee;
   flex-direction: row;
   display: flex;
@@ -127,14 +127,15 @@
 .cactus-dashboard-banner_image_view {
   display: flex;
   flex: 1;
-  align-items: flex-end;
+
   justify-content: flex-end;
 }
 
 .cactus-dashboard-banner_image_view img {
   width: 92%;
   height: 92%;
-  object-fit: contain;
+  object-fit: cover;
+  border-radius: 5rem;
 }
 
 .cactus-dashboard-templete_top_view {
@@ -231,6 +232,11 @@
 }
 
 @media screen and (max-width: 950px) {
+  .cactus-dashboard-banner_image_view img {
+    object-fit: contain;
+    width: 37rem;
+    height: 37rem;
+  }
   .cactus-dashboard-banner_top_view {
     padding: 7.6rem 5rem 13rem 5rem;
   }
@@ -278,7 +284,7 @@
   }
 }
 
-@media screen and (max-width: 690px) {
+@media screen and (max-width: 717px) {
   .cactus-dashboard-banner_text_view {
     width: 100%;
   }
@@ -390,5 +396,21 @@
   .cactus-dashboard-templete_image_view img {
     width: 17.3rem;
     height: 21rem;
+  }
+}
+
+@media screen and (max-width: 390px) {
+  .cactus-dashboard-templete_title_view h2 {
+    font-size: 1.2rem;
+  }
+  .cactus-dashboard-templete_view h3 {
+    font-size: 1rem;
+  }
+  .cactus-dashboard-templete_image_view img {
+    width: 12rem;
+    height: 15rem;
+  }
+  .cactus-dashboard-templete_title_view {
+    padding: 0.2rem 0.4rem;
   }
 }
