--- a/src/components/genderModel/genderModel.css
+++ b/src/components/genderModel/genderModel.css
@@ -133,6 +133,14 @@
   object-fit: contain;
 }
 
+.cactus-default-select-btn{
+  width: 100px;
+  height: 50px;
+  border-radius: 15px;
+  background-color: #2b453e;
+  cursor: pointer;
+}
+
 /* ------------Media Query------------- */
 
 @media screen and (max-width: 820px) {
