--- a/src/components/genderModel/genderModel.css
+++ b/src/components/genderModel/genderModel.css
@@ -88,7 +88,7 @@
   display: flex;
   flex: 1;
   padding-top: 6rem;
-  padding-bottom: 6rem;
+  /* padding-bottom: 6rem; */
 }
 
 .cactus-gender_model_detail_images_top_view h1 {
