--- a/src/components/customInputWithDropdown/customInputWithDropdown.css
+++ b/src/components/customInputWithDropdown/customInputWithDropdown.css
@@ -65,6 +65,7 @@
 .cactus-templete_detail-form_dropdown_title_icon_view img {
   width: 1.3rem;
   height: 1.3rem;
+  cursor: pointer;
 }
 
 .cactus-templete_detail-form_dropdown_title_divider {
