--- a/src/components/dropdownModel/dropdownModel.css
+++ b/src/components/dropdownModel/dropdownModel.css
@@ -46,7 +46,7 @@
     border: 1px solid #DDDBDA;
     border-radius: 5px;
     padding: 0.5rem 1rem;
-    position: absolute;
+    /* position: absolute; */
     top: 3.5rem;
     flex-direction: column;
 }
