--- a/src/components/templeteView/templeteView.css
+++ b/src/components/templeteView/templeteView.css
@@ -37,7 +37,6 @@
   height: 3rem;
   object-fit: cover;
 }
-
 .cactus-dashboard-templete_view h3 {
   font-family: "K2D";
   font-weight: 400;
@@ -46,7 +45,16 @@
   text-align: center;
   text-transform: capitalize;
   color: #333333;
-  padding-bottom: 1rem;
+}
+
+.cactus-dashboard-templete_view p {
+  font-family: "K2D";
+  font-weight: 400;
+  font-size: 1.1rem;
+  line-height: 2.6rem;
+  text-align: center;
+  color: #333333;
+  padding-bottom: .7rem;
 }
 
 .cactus-dashboard-templete_view h4 {
