Added onClick on text

--- a/src/components/customInputWithDropdown/customInputWithDropdown.css
+++ b/src/components/customInputWithDropdown/customInputWithDropdown.css
@@ -22,6 +22,7 @@
   font-size: 2rem;
   line-height: 2.6rem;
   color: #121212;
+  cursor: pointer;
 }
 
 .cactus-templete_detail-form_dropdown_title_view img {
